--- a/main.css
+++ b/main.css
@@ -18,6 +18,22 @@ body {
   justify-content: center;
   align-items: center;
   align-content: center;
+  background-image: url("images/pattern-background-mobile.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+@media (min-width: 425px) {
+  .container {
+    background-image: url("images/pattern-background-desktop.svg");
+  }
+}
+
+.pattern {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .card {
@@ -36,7 +52,7 @@ body {
 @media (min-width: 425px) {
   .card {
     max-width: 400px;
-    margin-top: 10%;
+    margin-top: 10vh;
     align-self: center;
     min-height: 550px;
   }
