--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,21 @@ body {
   justify-content: center;
   align-items: center;
   align-content: center;
+  background-image: url('images/pattern-background-mobile.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  @media (min-width: 425px) {
+    background-image: url('images/pattern-background-desktop.svg');
+  }
+}
+
+.pattern {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .card {
@@ -42,7 +57,7 @@ body {
 
   @media (min-width: 425px) {
     max-width: 400px;
-    margin-top: 10%;
+    margin-top: 10vh;
     align-self: center;
     min-height: 550px;
   }
